--- a/src/components/index.css
+++ b/src/components/index.css
@@ -10,3 +10,12 @@
   background-color: rgba(0, 123, 255, 0.1);
   z-index: -1;
 }
+.user-backgrond {
+  background-image: url(../assets/imgs/user-back.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.user-form {
+  opacity: 0.8;
+}
