--- a/src/components/index.css
+++ b/src/components/index.css
@@ -10,7 +10,7 @@
   background-color: rgba(0, 123, 255, 0.1);
   z-index: -1;
 }
-.user-backgrond {
+/* .user-backgrond {
   background-image: url(../assets/imgs/user-back.jpg);
   background-position: center;
   background-size: cover;
@@ -18,4 +18,4 @@
 }
 .user-form {
   opacity: 0.8;
-}
+} */
